# BookFairy

./: .gitignore  CLI.md  Procfile  README  README.md  bookfairy_cli.py  booklist.py  cli-requirements.txt  db.sqlite3  manage.py  procfile  pyproject.toml  requirements.txt
BookFairy/: .gitignore.rtf  procfile  settings.py  test.py  urls.py  wsgi.py
BookFairy/BookFairy/: settings.py  urls.py
BookFairy/bookapp/: PyQuery.py  admin.py  forms.py  models.py  views.py
BookFairy/bookapp/migrations/: 0002_initial.py
BookFairy/bookapp/registration/: activation_email.txt  registration_form.html
BookFairy/bookapp/static/CSS/: BookFairy.css
BookFairy/bookapp/templates/: 500.html  base.html  booklist.html  login.html  register.html
BookFairy/db/: bookfairy.sql
BookFairy/proj/: dev_settings.py  prod_settings.py
bfcore/: __init__.py  goodreads.py  library.py
bookapp/: PyQuery Function.py  admin.py  booklist.py  fastpass.py  forms.py  goodreads.py  library.py  models.py  oauth.py  views.py  views1.py  wsgi.py
bookapp/CSS/: BookFairy.css  bootstrap.css
bookapp/migrations/: 0001_initial.py
bookapp/registration/: activate.html  activation_email_subject.txt  registration_complete.html
bookapp/static/CSS/: BookFairy.css  bootstrap.css
bookapp/templates/: 404.html  base.html  booklist.html  index.html  login.html  logout.html  profile.html
db/: bookfairy.sql
proj/: common_settings.py  dev_settings.py  test.py  urls.py
standalone/: README.md  bookfairy_cli.py  requirements.txt
