[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookfairy"
version = "0.1.0"
description = "Check SFPL for checked in books, and Goodreads for ratings"
readme = "README"
authors = [
  { name = "Michelle Glauser" },
  { name = "James Bankhead" }
]
requires-python = ">=3.8"
# Core dependencies

dependencies = [
  "requests>=2.32.0",
  "pyquery>=2.0.0",
  "lxml>=4.9.0",
  "thefuzz>=0.22.0",
]

[project.optional-dependencies]
# Extras for web app
web = [
  "Django==3.2.25",
  "dj-database-url==1.3.0",
  "dj-static==0.0.6",
  "django-crispy-forms==1.14.0",
  "django-registration==3.3",
  "gunicorn==21.2.0",
  "psycopg2==2.9.10",
  "static3==0.7.0",
]
# Extras for Google Sheets input via gspread OAuth
sheets = [
  "gspread>=5.12.4",
]

[project.scripts]
bookfairy = "bookfairy_cli:main"

[tool.setuptools]
# Only package the shared core; the CLI is shipped as a top-level module
packages = ["bfcore"]
py-modules = ["bookfairy_cli"]

